--- a/index.html
+++ b/index.html
@@ -5,60 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Masoom Prince | Official Website</title>
   <style>
+    * {margin:0;padding:0;box-sizing:border-box;}
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #000000, #1e1e1e);
-      color: #fff;
-      text-align: center;
-      margin: 0;
-      padding: 0;
+      font-family:'Poppins',sans-serif;
+      background:radial-gradient(circle at top,#1a1a1a,#000);
+      color:#fff;
+      text-align:center;
+      min-height:100vh;
     }
-    header {
-      padding: 40px 20px;
-    }
-    h1 {
-      font-size: 2.5em;
-      color: #ff4747;
-    }
-    p {
-      font-size: 1.1em;
-      color: #ddd;
-    }
+    header {padding:60px 20px 20px;}
+    h1 {font-size:3em;color:#ff4747;margin-bottom:10px;}
+    p {font-size:1.2em;color:#ccc;max-width:600px;margin:10px auto 30px;line-height:1.6;}
+    .profile-img {width:150px;height:150px;border-radius:50%;border:3px solid #ff4747;margin-bottom:20px;object-fit:cover;}
+    .links {margin:40px 0;}
     .links a {
-      display: inline-block;
-      margin: 15px;
-      padding: 10px 20px;
-      background: #ff4747;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      transition: 0.3s;
+      display:inline-block;margin:12px;padding:12px 25px;background:#ff4747;color:white;
+      text-decoration:none;border-radius:10px;font-weight:600;transition:.3s;
+      box-shadow:0 0 10px rgba(255,71,71,.4);
     }
-    .links a:hover {
-      background: #ff7777;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      font-size: 0.9em;
-      color: #aaa;
-    }
+    .links a:hover {background:#ff6565;transform:translateY(-3px);}
+    .about {background:#111;padding:40px 20px;border-top:1px solid #333;}
+    .about h2 {color:#ff4747;margin-bottom:20px;}
+    footer {padding:20px;font-size:.9em;color:#aaa;border-top:1px solid #333;background:#0a0a0a;margin-top:40px;}
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Masoom Prince</h1>
-    <p>Welcome to the official website of Masoom Prince YouTube Channel 🎮</p>
-  </header>
-
-  <div class="links">
-    <a href="https://youtube.com/@masoomprince5495" target="_blank">🎥 YouTube Channel</a>
-    <a href="https://discord.gg/9SrVFGcgut" target="_blank">💬 Join Discord</a>
-    <a href="mailto:masoomprince@gmail.com">📧 Contact</a>
-  </div>
-
-  <footer>
-    <p>© 2025 Masoom Prince | All Rights Reserved</p>
-  </footer>
-</body>
-</html>
+    <img src="https://yt3.googleusercontent.com/ytc/AIdro_nXGqv_xH1n5rk_H7cEOCQ7FUV_qKthzLBld2ZsC7fZsg=s176-c-k-c0x00ffffff-no-rj" alt="Masoom Prince" class="profile-im
